--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: misc
 Priority: extra
 Maintainer: IServ <info@iserv.eu>
 Build-Depends: debhelper (>= 10)
-Build-Depends-Indep: iserv3-dev
+#Build-Depends-Indep: iserv3-dev
 Standards-Version: 4.2.1
 Homepage: https://iserv.eu/package/iserv-gnupg-forwarding
 
