--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,12 @@
-Source: iserv-gnupg-forwarding
+Source: stsbl-iserv-gnupg-forwarding
 Section: misc
-Priority: extra
+Priority: optional
 Maintainer: IServ <info@iserv.eu>
 Build-Depends: debhelper (>= 10)
-#Build-Depends-Indep: iserv3-dev
-Standards-Version: 4.2.1
-Homepage: https://iserv.eu/package/iserv-gnupg-forwarding
+Build-Depends-Indep: iserv3-dev
+Standards-Version: 4.3.0
 
-Package: iserv-gnupg-forwarding
+Package: stsbl-iserv-gnupg-forwarding
 Architecture: all
 Depends: ${misc:Depends},
   ${perl:Depends},
