Moved to iservinstall

--- a/debian/control
+++ b/debian/control
@@ -2,15 +2,12 @@ Source: stsbl-iserv-gnupg-forwarding
 Section: misc
 Priority: optional
 Maintainer: Stadtteilschule Blankenese <repository@stsbl.de>
-Build-Depends: debhelper (>= 10)
-Build-Depends-Indep: iserv-buildtools
-Standards-Version: 4.3.0
+Build-Depends: debhelper-compat (= 13), dh-sequence-iserv, dh-sequence-stsbl
+Standards-Version: 4.5.0
 
 Package: stsbl-iserv-gnupg-forwarding
 Architecture: all
-Depends: ${misc:Depends},
-  ${perl:Depends},
-  libpam-systemd,
+Depends: libpam-systemd, ${misc:Depends}, ${perl:Depends}
 Description: IServ GnuPG-Agent-Forwarding
  Konfiguriert den Server für das simultane Forwarding des GnuPG-Agents durch
  mehrere Fernwartungsbenutzer.
