--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ debian/iserv-gnupg-forwarding.debhelper.log
 debian/files
 debian/debhelper-build-stamp
 debian/*.debhelper
+/Makefile.iservmake
+/locale
+/system-locale
+!/locale/templates/*_misc.pot
